integration-tests bundle building jvm arguments changed